--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ var is = true;
     // Notifications
     alertify.message('<a href="https://github.com/enjalot/Inlet" target="_blank">Created</a> by <a href="http://twitter.com/enjalot" target="_blank">@enjalot</a>, <a href="http://twitter.com/mrejfox" target="_blank">@mrejfox</a> and <a href="http://github.com/georules" target="_blank">@georules</a>')
     setTimeout(function() {
-      alertify.message('Forked by <a href="http://twitter.com/mikethedj4" target="_blank">@mikethedj4</a>');
+      alertify.message('Forked by <a href="http://twitter.com/michaelsboost" target="_blank">@michaelsboost</a>');
     }, 1500)
     </script>
   </body>
